switch settings to webgl build

--- a/Assets/Scripts/README
+++ b/Assets/Scripts/README
@@ -32,5 +32,4 @@ changelog:
 *multi select now works
 *added arrow keys obstacle (left/right)
 *added breaking mechanism
-add commit log
-video: 
+video: https://youtu.be/FGX5OAzZnak
